<resources>
    <string name="app_name">Home</string>
    <string name="action_settings">Settings</string>
    <string name="connect_device">Connect to Device</string>
    <string name="view_stats">View Stats</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_star">*</string>
    <string name="btn_hash">#</string>
    <string name="btn_A">A</string>
    <string name="btn_B">B</string>
    <string name="btn_C">C</string>
    <string name="btn_D">D</string>


    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_ex_successful">Entry deleted</string>
    <string name="editor_delete_ex_failed">Error with deleting the entry</string>
    <string name="delete_dialog_msg">Delete this entry?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string-array name="actions">
        <item>OFF</item>
        <item>ON</item>
    </string-array>

    <string name="transition_CONNECT">connect_to_device</string>

</resources>
